package com.takibo.identitycore.domain.security.policy.mfa;

public class MfaPolicy {
}
