package com.takibo.identitycore.infrastructure.entity;

public enum PermissionEffect {
    ALLOW,
    DENY
}
